
  v1.8, __._.____
  - fixed: HDA in VmWare.
  - fixed: SB DSP reset isn't supposed to reset SB mixer.

  v1.7, 11.8.2025
  - fixed: clear CF in case int 31h hook proc handles the function (ax=0x20x).
  - added soundfont support from VSBHDASF; new cmdline options /SF, /MV, /PS.
  - fixed: array bounds check in vopl3.cpp added (& 0xff).
  - fixed: handling of DSP cmd E2 (DMA identification).
  - DSP cmd 14h with size < 32 will trigger an IRQ at once; this should make
    more detection routines to work.
  - qpiemu.dll: bit 1 of register CH now holds IF.
  - XMSRes.exe: option -H added.
  - SB16: 8-bit signed PCM mode (C6h 10h) supported.
  - HDA: reset controller if no codecs are attached.
  - cmdline option /CF added.
  - fixed: ES1371 audio driver.
  - /F cmdline option now accepts 11025 as argument.
  - added support for SiS 7012.
  - cmdline option /O1 for SBLive enables speaker jack.
  - fixed: SB Live/SB Audigy FX8010 initialization.

  v1.6, 10.6.2025
  - fixed: some port trap variables weren't initialized if real-mode port
    trapping was disabled.
  - fixed: debug displays may have caused a GPF.
  - VSBHDA16: option /DIVE added; enable Borland "Runtime error 200" fix.
  - fixed: VPIC EOI check now tests bits 5/6 of OCW2; handles specific EOIs.
  - fixed VMPU: set UART mode cmd 0x3F added.
  - fixed regression v1.4-v1.5: if DAC had no amplifier, volume was very low
    and couldn't be changed with /VOL.

  v1.5, 8.6.2024
  - MPU port emulation if BLASTER variable contains P=xxx.
  - cmdline option /P added.
  - cmdline option /SD added.
  - fix: volume for SB Live/Audigy wasn't set correctly.
  - trap PIC port to reject attempts to mask the real sound hw interrupt
    (Rational DOS extender).
  - switch to client context for SB interrupt emulation.
  - HDA: improved error msg if card init fails.
  - IRQ 2 accepted.
  - fix: SFX noise in tyrian2k, also may be in other games that use
    non-autoinit DSP cmds.

  v1.4, 20.4.2024