@@ -2,6 +2,10 @@
   v1.8, __._.____
   - fixed: HDA in VmWare.
   - fixed: SB DSP reset isn't supposed to reset SB mixer.
+  - interrupt handling for SB IRQ changed; switch HOSTRT in sbisr.asm now 0 -
+    was 1 in v1.6-v1.7; this avoids crashes if SB IRQ is also used by PCI
+    devices (esp. USB and IDE/SAVE controllers).
+  - added low-level tools pciirq.exe, sblive.exe and ichac97.exe.
 
   v1.7, 11.8.2025
   - fixed: clear CF in case int 31h hook proc handles the function (ax=0x20x).
